# Image_Processing

./: README.md
proj1/: CMakeLists.txt  Driver  Driver.cpp  HistogramSpec.cpp  Quantize.cpp  image.cpp  image.h  makefile
proj1/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
proj1/images/: aerial.pgm  boat.pgm  f_16.pgm  lax.pgm  peppers.pgm  tools.pgm  wheel.pgm
proj1/out_images/: hist_boat.csv  hist_f_16.csv  spec_hist_boat.csv  spec_hist_f_16.csv
proj2/: Correlate  Correlate.cpp  WriteImage.cpp  fake.cpp  image.cpp  isf.pgm  makefile
proj2/images/: correlated.pgm  out_x_prewitt_lenna.pgm  out_x_prewitt_sf.pgm  out_x_sobel_lenna.pgm  out_x_sobel_sf.pgm  out_y_prewitt_lenna.pgm  out_y_prewitt_sf.pgm  out_y_sobel_sf.pgm  sf.pgm
proj3/exp1/: exp1.cpp
proj3/exp2/: exp2.cpp  image.cpp
proj3/exp2/pgm_exp2_out/: square128out.pgm  square128outnotcentered.pgm  square32out.pgm  square32outnotcentered.pgm  square64.pgm  square64out.pgm  square64outnotcentered.pgm
proj3/exp3/: Makefile  ReadImageHeader.cpp  exp3.cpp
proj3/exp3/pgm_exp3_out/: lenna_zero_phase.pgm
proj4/exp3/: Makefile  exp3  exp3.cpp
proj4/exp3/pgm_exp3_out/: lenna_magnitude_1.pgm
proj4/part1/: AntiPad.cpp  FButterWFilter.cpp  Mix.cpp  Padding.cpp  README.txt  ReadImage.cpp  WriteImage.cpp  exp2.cpp  girl_padded.pgm  padding
